--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,12 @@
         <header>
             <h1>Samuel B. Lopez</h1>
             <h2>Student | Programmer</h2>
+            <nav>
             <a class="active" href="contact.html">Contact</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="resume.html">Résumé</a>
             <a href="index.html">Home</a>
+        </nav>
         </header>
 
         <!-- Main -->
@@ -29,7 +31,8 @@
             <h3>Contact Form</h3>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form action="https://formspree.io/f/mbjnazoo"
+  method="post">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" placeholder="Your name..">
 
